contrast fix

--- a/app/assets/stylesheets/grenander/search-source.css.scss
+++ b/app/assets/stylesheets/grenander/search-source.css.scss
@@ -147,8 +147,8 @@
 }
 
 .search-source .btn-primary {
-	background-color: #9e68c7;
-	border-color: #9e68c7;
+	background-color: #8b49b3;
+	border-color: #8b49b3;
 }
 
 .search-source .btn-primary:hover,
